fix overflow team

--- a/css/main.css
+++ b/css/main.css
@@ -702,7 +702,7 @@ header{
     bottom: 0;
     padding-bottom: 15.5vh;
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: hidden;
 }
 
 .container-nils{
